# telegramCloud

./: .gitignore  CMakeLists.txt  Moduls.cpp  core.cpp  main.cpp  tdclass.cpp
header/: Moduls.h  core.h  tdclass.h
td/example/cpp/: td_example.cpp
td/openssl/x64/lib/: libcrypto.lib
