cmake_minimum_required(VERSION 3.0.2)
project(TelegramCloud)
file(GLOB CPPS "*.cpp")
#set(OPENSSL_ROOT_DIR "openssl/x64")
#set(ZLIB_LIBRARY "zlib/lib")
#set(ZLIB_INCLUDE_DIR "zlib/include")
#include_directories("zlib/include")
#if (NOT ZLIB_FOUND)
#  find_package(ZLIB)
#endif()
#if (NOT ZLIB_FOUND)
#  message(WARNING "Can't find zlib: stop TDLib building")
#  return()
#endif()

add_subdirectory(td)
add_library(${PROJECT_NAME} SHARED ${CPPS})
target_link_libraries(${PROJECT_NAME} PUBLIC Td::TdStatic)
